--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,6 @@
 .card {
     width: 280px;
+    position: relative;
 }
 
 .card .cabecalho {
@@ -34,4 +35,18 @@
     line-height: 22px;
     color: #212121;
     padding: 0 16px;
+}
+
+.card .deletar {
+    position: absolute;
+    right: -10px;
+    top: -10px;
+    cursor: pointer;
+}
+
+.card .favoritar {
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+    cursor: pointer;
 }
