--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,13 +1,21 @@
-.formulario {
+.formulario-container {
     display: flex;
+    gap: 32px;
+    flex-wrap: wrap;
+    align-items: flex-start;
     justify-content: center;
-    margin: 80px 0;
+    margin: 80px 50px;
 }
 
-.formulario form {
-    max-width: 80%;
+.formulario-container form {
     background-color: #f2f2f2;
     border-radius: 20px;
     padding: 36px 64px;
     box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
+    flex: 1;
+}
+
+.formulario-container .formulario h2 {
+    font-weight: 400;
+    font-size: 32px;
 }
