--- a/src/components/Time/Time.css
+++ b/src/components/Time/Time.css
@@ -1,6 +1,7 @@
 .time {
     text-align: center;
     padding: 32px;
+    position: relative;
 }
 
 .time h3 {
@@ -17,4 +18,10 @@
     margin-top: 32px;
     flex-wrap: wrap;
     row-gap: 32px;
+}
+
+.time .selecionaCor {
+    position: absolute;
+    top: 20px;
+    right: 50px;
 }
